# intel-pin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  inscount.cpp  shell.nix  test_inscount.sh
pin/: README  pin  pin.sig
pin/doc/html/: group__VERSION.html  index.html
pin/doc/xml/: group__VERSION.xml  indexpage.xml  level__base_8H.xml  pin__version_8h.xml
pin/extras/components/lib/ia32/: libatomic.a.sig  libdebugger-protocol.a.sig  libdebugger-protocol.so.sig
pin/extras/components/lib/intel64/: libatomic.a.sig  libdebugger-protocol.a.sig  libdebugger-protocol.so.sig
pin/extras/crt/doc/xml/: file_8h.xml  ipc_8h.xml  rw-lock_8h.xml  signals_8h.xml  threads-management_8h.xml
pin/extras/xed-ia32/lib/: libxed.so.sig
pin/extras/xed-intel64/lib/: libxed.so.sig
pin/ia32/lib/: libdwarf.so.sig  libpin.a.sig  libpindwarf.so.sig  libpinjitprofiling.so.sig  libsapin.a.sig
pin/ia32/runtime/pincrt/: crtbegin.o.sig  crtbeginS.o.sig  crtend.o.sig  crtendS.o.sig  libc++.so.sig  libc++abi.so.sig  libc-dynamic.so.sig  libc-static.a.sig  libdl-dynamic.so.sig  libm-dynamic.so.sig  libos-apis.a.sig  libunwind-dynamic.so.sig  linker  linker.sig
pin/intel64/lib/: libdwarf.so.sig  libpin.a.sig  libpindwarf.so.sig  libpinjitprofiling.so.sig  libsapin.a.sig
pin/intel64/runtime/pincrt/: crtbegin.o.sig  crtbeginS.o.sig  crtend.o.sig  crtendS.o.sig  libc++.so.sig  libc++abi.so.sig  libc-dynamic.so.sig  libc-static.a.sig  libdl-dynamic.so.sig  libm-dynamic.so.sig  libos-apis.a.sig  libunwind-dynamic.so.sig  linker  linker.sig
pin_tool/: CMakeLists.txt  busy_loop.cpp  inscount.cpp
